Completed add purchase UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddPurchaseActivity"
-                    android:parentActivityName=".MainActivity">
-
-        </activity>
+        <activity
+            android:name=".AddPurchaseActivity"
+            android:label="Add Purchase"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".ViewPurchasesActivity"
+            android:label="View Purchases"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
-
 </manifest>
