Abstracted add/edit activities and loaded details to edit activity when clicked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,8 @@
             android:name=".activities.ViewPurchasesActivity"
             android:label="View Purchases"
             android:parentActivityName=".activities.MainActivity"></activity>
+        <activity android:name=".activities.EditPurchaseActivity"
+            android:label="Edit Purchase"
+            android:parentActivityName=".activities.ViewPurchasesActivity"></activity>
     </application>
 </manifest>
