--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
             android:label="Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -46,8 +45,10 @@
             android:name=".activities.EditTypeActivity"
             android:label="Edit Type"
             android:parentActivityName=".activities.ManageTypesActivity" />
-        <activity
-            android:name=".activities.TypeActivity" />
+        <activity android:name=".activities.TypeActivity" />
+        <activity android:name=".activities.trialActivity">
+
+        </activity>
     </application>
 
 </manifest>
