--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -46,9 +47,8 @@
             android:label="Edit Type"
             android:parentActivityName=".activities.ManageTypesActivity" />
         <activity android:name=".activities.TypeActivity" />
-        <activity android:name=".activities.trialActivity">
-
-        </activity>
+        <activity android:name=".activities.trialActivity"></activity>
+        <activity android:name=".activities.StatisticsActivity"></activity>
     </application>
 
 </manifest>
