--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,11 +47,14 @@
             android:label="Edit Type"
             android:parentActivityName=".activities.ManageTypesActivity" />
         <activity android:name=".activities.TypeActivity" />
-        <activity android:name=".activities.trialActivity"></activity>
+        <activity android:name=".activities.trialActivity" />
         <activity
             android:name=".activities.StatisticsActivity"
             android:label="Statistics"
-            android:parentActivityName=".activities.MainActivity"></activity>
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.SelectTypeIconActivity"
+            android:label="Select Icon"></activity>
     </application>
 
 </manifest>
